--- a/index.html
+++ b/index.html
@@ -2,9 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VerterVpn | Privacidad y Velocidad Mesh</title>
+    <meta name="theme-color" content="#06b6d4" />
+    
+    <title>VerterVpn | Privacidad Mesh y Redes Ultra-Seguras 🛡️⚡</title>
+    <meta name="description" content="VerterVpn es el proveedor líder en redes mesh descentralizadas. Seguridad mTLS, cifrado militar y velocidad sin límites. Navega con privacidad total." />
+    <meta name="keywords" content="VPN, Mesh Network, mTLS, Privacidad, Seguridad, Red Descentralizada, VPN Rápida" />
+    <meta name="author" content="VerterVpn Team" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://verter.kevinsvega.online/" />
+    <meta property="og:title" content="VerterVpn | Privacidad Mesh y Redes Ultra-Seguras" />
+    <meta property="og:description" content="Seguridad mTLS y redes mesh de próxima generación para proteger tu identidad digital." />
+    <meta property="og:image" content="https://verter.kevinsvega.online/og-image.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://verter.kevinsvega.online/" />
+    <meta property="twitter:title" content="VerterVpn | Privacidad Mesh y Redes Ultra-Seguras" />
+    <meta property="twitter:description" content="Navega sin dejar rastro con la tecnología mesh de VerterVpn." />
+    <meta property="twitter:image" content="https://verter.kevinsvega.online/og-image.jpg" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Outfit:wght@700;800&display=swap" rel="stylesheet">
